fix: persistent server api
